# ci-plugin-demo

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  Jenkinsfile-cloud  Jenkinsfile-cmake  Jenkinsfile-projucer  README.md  ci-plugin-demo.jucer
Installer/Mac/: ci-plugin-demo.pkgproj  install.sh
Installer/Windows/: README.md  ci-plugin-demo-installer.iss
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
